[FLINK-39011][table-api-java] Accept UnresolvedDataType in BaseExpression.cast()